initial split package - builds with only notes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,14 +21,10 @@ Imports:
     assertthat,
     DGEobj  (>= 1.0),
     dplyr   (>= 0.8),
-    ggplot2 (>= 3.0),
-    ggrepel,
-    grid,
-    igraph,
+    ggplot2,
     magrittr,
-    matrixStats,
-    stats,
     statmod,
+    stats,
     stringr,
     tibble,
     tidyr,
@@ -42,10 +38,6 @@ Imports:
 Suggests:
     knitr,
     rmarkdown,
-    testthat,
-    org.Hs.eg.db,
-    org.Mm.eg.db,
-    org.Rn.eg.db,
-    org.Cf.eg.db
+    testthat
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
