added biomart - needed for the vignette

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,6 +38,7 @@ Imports:
 Suggests:
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    biomaRt
 RoxygenNote: 7.1.1
 VignetteBuilder: knitr
